feat(font): 新增字体文件
新增字体文件

--- a/css/index.css
+++ b/css/index.css
@@ -4,7 +4,7 @@
 }
 @font-face {
   font-family: Art;
-  src: url('../font/Art.ttf');
+  src: url('../font/Art.otf');
 }
 * {
   -moz-user-select: none;
