--- a/css/index.less
+++ b/css/index.less
@@ -11,7 +11,7 @@
 
 @font-face {
     font-family: Art;
-    src: url('../font/Art.ttf');
+    src: url('../font/Art.otf');
 }
 
 @ffDate: 'Time-Number';
