--- a/css/index.less
+++ b/css/index.less
@@ -30,63 +30,89 @@ body {
     height: auto;
     background: #e5e4e4;
     font-family: @ffArt;
-    font-size: 18px;
+    font-size: 14px;
 
-    .bg {
-        position: absolute;
+    nav {
+        position: relative;
         width: 100%;
         height: 100vh;
-        top: 0;
-        left: 0;
-        background: url("../img/bg.jpg") center no-repeat;
-        background-size: cover;
-        z-index: -1;
-    }
-
-    > nav {
-        width: 100%;
-        max-width: @maxWidth;
-        height: 80vh;
-        margin: 10vh auto;
+        margin: 0 auto;
         display: flex;
-        justify-content: space-between;
+        justify-content: center;
         align-items: center;
-        //background: #eeeeee46;
-        //backdrop-filter: blur(6px);
-        //border-radius: 8px;
-        border-radius: @radiusL;
-        box-shadow: 2px 2px 16px 1.5px #f4f4f460;
-        color: #f4f4f4;
 
-        .nav-left {
-            width: 38%;
+        .nav-wrap {
+            width: 100%;
+            max-width: @maxWidth;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            box-shadow: 2px 2px 16px 1.5px #f4f4f460;
+            color: #f4f4f4;
 
-            .nav-left-date {
+            .nav-left {
+                width: 38%;
+
+                .nav-left-date {
 
 
-                > p {
-                    font-size: 24px;
-                    color: #f4f4f4;
+                    > p {
+                        font-size: 24px;
+                        color: #f4f4f4;
 
+                    }
+
+                    > span {
+                        font-size: 64px;
+                        color: #f4f4f4;
+                        font-family: @ffDate;
+                    }
                 }
+            }
 
-                > span {
-                    font-size: 64px;
-                    color: #f4f4f4;
-                    font-family: @ffDate;
-                }
+            .nav-right {
+                width: 58%;
+            }
+
+            img {
+                background: #dae5e0b5;
+                border-radius: 8px;
+                padding: 8px;
+                box-shadow: inset 3px 3px 6px #bfc5c3, inset -6px -6px 12px #f5f5f5, 2px 2px 15px 1px #3a0a0a80;
             }
         }
 
-        .nav-right {
-            width: 58%;
-        }
 
-        img {
-            background: #dae5e0b5;
-            border-radius: 8px;
-            padding: 8px;
-            box-shadow: inset 3px 3px 6px #bfc5c3, inset -6px -6px 12px #f5f5f5, 2px 2px 15px 1px #3a0a0a80;
+        &:before {
+            position: absolute;
+            display: block;
+            content: '';
+            width: 100%;
+            height: 100vh;
+            top: 0;
+            left: 0;
+            background: url("../img/bg.jpg") center no-repeat;
+            background-size: cover;
+            z-index: -1;
         }
     }
+
+    header {
+        position: sticky;
+        width: 100%;
+        height: 48px;
+        top: 0;
+        inset: 0;
+    }
 }
+
+/* 水滴形状 */
+//position: absolute;
+//background: #8775a780;
+//width: 60px;
+//height: 60px;
+//border-radius: 28px 24px 32px 30px;
+//top: 507px;
+//left: 600px;
+//color: transparent;
+//box-shadow: inset 2px 2px 16px 1.5px #ffffffa0;
