--- a/css/index.less
+++ b/css/index.less
@@ -1,3 +1,21 @@
+* {
+    -moz-user-select: none; /*火狐*/
+    -webkit-user-select: none; /*webkit浏览器*/
+    -ms-user-select: none; /*IE10*/
+    user-select: none;
+
+    -webkit-margin-before: 0;
+    -webkit-margin-after: 0;
+}
+
+img {
+    display: block;
+}
+
+:root {
+    --bg-img: url("../img/bg.jpg");
+}
+
 @marginSize: 16px;
 @maxWidth: 1440px;
 @radiusL: 12px;
@@ -17,13 +35,6 @@
 @ffDate: 'Time-Number';
 @ffArt: 'Art';
 
-*{
-    -moz-user-select: none; /*火狐*/
-    -webkit-user-select: none; /*webkit浏览器*/
-    -ms-user-select: none; /*IE10*/
-    user-select: none;
-}
-
 body {
     position: relative;
     width: 100%;
@@ -32,8 +43,18 @@ body {
     font-family: @ffArt;
     font-size: 14px;
 
+    .bg {
+        position: fixed;
+        width: 100%;
+        height: 100vh;
+        top: 0;
+        left: 0;
+        background: var(--bg-img) center no-repeat;
+        background-size: cover;
+        z-index: -1;
+    }
+
     nav {
-        position: relative;
         width: 100%;
         height: 100vh;
         margin: 0 auto;
@@ -81,20 +102,6 @@ body {
                 box-shadow: inset 3px 3px 6px #bfc5c3, inset -6px -6px 12px #f5f5f5, 2px 2px 15px 1px #3a0a0a80;
             }
         }
-
-
-        &:before {
-            position: absolute;
-            display: block;
-            content: '';
-            width: 100%;
-            height: 100vh;
-            top: 0;
-            left: 0;
-            background: url("../img/bg.jpg") center no-repeat;
-            background-size: cover;
-            z-index: -1;
-        }
     }
 
     header {
@@ -104,17 +111,20 @@ body {
         height: 48px;
         padding: 0 calc((100% - 1440px) / 2);
         top: 0;
+        background: #ffffff20;
         backdrop-filter: blur(12px);
-        box-shadow: 0 2px 8px 1px #975a8357;
+        box-shadow: inset 0 2px 8px 1px #975a8357;
         display: flex;
         justify-content: space-between;
         align-items: center;
+        z-index: 99;
 
         .header-name {
             width: 240px;
             display: flex;
             align-items: center;
             margin-right: @marginSize;
+            color: #fff;
 
             > img {
                 width: 40px;
@@ -155,19 +165,59 @@ body {
             flex-shrink: 0;
 
             .aside-personal {
+                padding: @marginSize;
+                //background: #ffffff46;
+
+                backdrop-filter: blur(12px);
+                box-shadow: inset 0 0 8px 2px #f4f4f480;
+                border-radius: @radiusM;
+                text-align: center;
+
                 > img {
                     display: block;
-                    width: 120px;
-                    height: 120px;
-                    margin: 36px auto;
+                    width: 108px;
+                    height: 108px;
+                    margin: 0 auto @marginSize;
                     border-radius: 100%;
+                }
+
+                .aside-personal-name {
+                    font-size: 16px;
+                    color: #fff;
+                    margin-bottom: calc(@marginSize / 2);
+                }
+
+                .aside-personal-job {
+                    color: #f2f2f2;
+                    margin-bottom: calc(@marginSize / 2);
+                }
+
+                .aside-personal-introduce {
+                    color: #9e9e9e;
+                    margin-bottom: calc(@marginSize / 2);
+                }
+
+                .aside-personal-nav {
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
                 }
             }
         }
 
         > section {
             width: 100%;
-            background: #c6c8c9;
+
+            .main-my {
+                border-radius: @radiusM;
+                height: 320px;
+                box-shadow: 2px 2px 16px 1.5px #f4f4f460;
+                margin-bottom: @marginSize;
+                background-color: #fff;
+                background-image: linear-gradient(90deg,rgba(159,219,252,.15) 3%,transparent 0),linear-gradient(1turn,rgba(159,219,252,.15) 3%,transparent 0);
+                background-size: 20px 20px;
+                background-position: 50%
+            }
         }
 
 
