--- a/css/index.less
+++ b/css/index.less
@@ -143,11 +143,12 @@ body {
                 margin-left: @marginSize;
                 cursor: pointer;
                 transition: all .4s;
+                color: #f2f8fa;
 
-                box-shadow: 4px 4px 6px 1px #d9dce6,
-                inset 4px 5px 6px #e2e4e8,
-                    inset -3px -4px 8px #f5f9fd,
-                inset 4px 3px 4px #d9dce6;
+                //box-shadow: 4px 4px 6px 1px #d9dce6,
+                //inset 4px 5px 6px #e2e4e8,
+                //    inset -3px -4px 8px #f5f9fd,
+                //inset 4px 3px 4px #d9dce6;
             }
         }
     }
